fix: canonical model export and isolated asynchronous inference replies